--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node show_do_milhao.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Everton Sousa Oliveira",
   "license": "ISC",
   "dependencies": {
     "readline": "^1.3.0"
